(feat) Added the add by CSV file feature for the student model
